<resources>
    <string name="rest_url">http://10.129.53.97:8080/fitme</string>
    <string name="app_name">FitMe</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logout">Logout</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">138120186746775</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Please enable location service."
    </string>
    <string name="item_title">Name</string>
    <string name="item_desc">lorem ipsum</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Username</string>
    <string name="pref_default_display_name">John Doe</string>
    <string name="pref_title_default_password">Password</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_food_intake">FoodIntakeActivity</string>
    <string name="prompt_username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_date_of_birth">Date of birth</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="prompt_height">Height</string>
    <string name="prompt_weight">Weight</string>
    <string name="invalid_password">Password is invalid.</string>
    <string name="PREFERENCES">preferences</string>
    <string name="LOGGEDINPREFERENCE">logged_in</string>
    <string name="invalid_username">This username is invalid.</string>
    <string name="TOKENPREFERENCE">token</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission">Allow Location</string>
    <string name="text_location_permission">Please allow location service.</string>
    <string name="ok">Allow</string>
    <string name="add_current_weight">Add current weight</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
